[gd_scene load_steps=32 format=2]

[ext_resource path="res://Graphics/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Prefabs/BuildingPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Prefabs/Building/Farm.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Prefabs/Building/House.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Prefabs/ResearchPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Research.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Prefabs/Building/Big_House.tscn" type="PackedScene" id=8]
[ext_resource path="res://Graphics/grass_texture.png" type="Texture" id=9]
[ext_resource path="res://Scripts/camera.gd" type="Script" id=10]
[ext_resource path="res://Sounds/404358__kagateni__success.wav" type="AudioStream" id=11]
[ext_resource path="res://new_theme.tres" type="Theme" id=12]
[ext_resource path="res://Scenes/Prefabs/Building/Big_Farm.tscn" type="PackedScene" id=13]
[ext_resource path="res://Graphics/fleshpot.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Fleshpot.gd" type="Script" id=15]
[ext_resource path="res://Sounds/249300__suntemple__access-denied.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/63524__florian-reinke__money5.wav" type="AudioStream" id=17]
[ext_resource path="res://Scenes/Prefabs/Building/Hotel.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Prefabs/Building/Minecraft.tscn" type="PackedScene" id=19]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="CircleShape2D" id=12]
radius = 8.63713

[sub_resource type="DynamicFont" id=5]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[sub_resource type="Theme" id=9]
Panel/styles/panel = SubResource( 8 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0.498039, 0.196078, 0.196078, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Margin" type="MarginContainer" parent="Canvas"]
anchor_right = 1.0
margin_left = 113.0
margin_top = 2.0
margin_bottom = 18.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas/Margin"]
margin_right = 367.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "250C"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin2" type="MarginContainer" parent="Canvas"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_top = 2.0
margin_right = -1.0
margin_bottom = 20.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Canvas/Margin2"]
margin_right = 102.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Canvas/Margin2/Grid"]
margin_right = 102.0
margin_bottom = 8.0
rect_min_size = Vector2( 102, 0 )
custom_fonts/font = SubResource( 3 )
text = "0/0P"
align = 2

[node name="Label2" type="Label" parent="Canvas/Margin2/Grid"]
margin_top = 12.0
margin_right = 102.0
margin_bottom = 20.0
rect_min_size = Vector2( 102, 0 )
custom_fonts/font = SubResource( 3 )
text = "0J"
align = 2

[node name="Margin3" type="MarginContainer" parent="Canvas"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -86.0
margin_top = -28.0
margin_right = -4.0
margin_bottom = -5.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Canvas/Margin3"]
margin_right = 82.0
margin_bottom = 23.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Research"

[node name="Panel" type="Panel" parent="Canvas"]
anchor_bottom = 1.0
margin_right = 112.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="Canvas/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Canvas/Panel/Grid"]
margin_right = 112.0

[node name="Label" type="Label" parent="Canvas/Panel/Grid"]
margin_top = 4.0
margin_right = 112.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 1 )
text = "Building Menu"
align = 1

[node name="Scroll" type="ScrollContainer" parent="Canvas/Panel/Grid"]
margin_top = 16.0
margin_right = 112.0
margin_bottom = 266.0
rect_min_size = Vector2( 112, 250 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vbox" type="VBoxContainer" parent="Canvas/Panel/Grid/Scroll"]
margin_right = 112.0
margin_bottom = 50.0

[node name="BuildingPanel" parent="Canvas/Panel/Grid/Scroll/Vbox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 112.0
margin_bottom = 23.0
prefab = ExtResource( 5 )

[node name="BuildingPanel2" parent="Canvas/Panel/Grid/Scroll/Vbox" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 112.0
margin_bottom = 50.0
prefab = ExtResource( 4 )

[node name="Label" parent="Canvas/Panel/Grid/Scroll/Vbox/BuildingPanel2/Panel/Grid/Center" index="0"]
margin_left = 24.0
margin_right = 56.0
text = "Farm"

[node name="Label" parent="Canvas/Panel/Grid/Scroll/Vbox/BuildingPanel2/Panel/Grid/Grid" index="0"]
text = "25c"

[node name="Fleshpot" type="Sprite" parent="Canvas"]
position = Vector2( 240, 230 )
scale = Vector2( 5, 5 )
texture = ExtResource( 14 )
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="Canvas/Fleshpot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Canvas/Fleshpot/Area2D"]
shape = SubResource( 12 )

[node name="buy" type="AudioStreamPlayer" parent="Canvas/Fleshpot"]
stream = ExtResource( 17 )

[node name="not_moeny" type="AudioStreamPlayer" parent="Canvas/Fleshpot"]
stream = ExtResource( 16 )

[node name="Research" type="CenterContainer" parent="Canvas"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -125.0
margin_right = 50.0
margin_bottom = 125.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Canvas/Research"]
margin_right = 100.0
margin_bottom = 250.0
rect_min_size = Vector2( 100, 250 )

[node name="Grid" type="GridContainer" parent="Canvas/Research/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas/Research/Panel/Grid"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
custom_fonts/font = SubResource( 5 )
text = "Research"
align = 1
valign = 1

[node name="Control" type="Control" parent="Canvas/Research/Panel/Grid"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 24.0

[node name="Scroll" type="ScrollContainer" parent="Canvas/Research/Panel/Grid"]
margin_top = 28.0
margin_right = 100.0
margin_bottom = 228.0
rect_min_size = Vector2( 0, 200 )

[node name="VBox" type="VBoxContainer" parent="Canvas/Research/Panel/Grid/Scroll"]
margin_right = 100.0
margin_bottom = 172.0

[node name="ResearchPanel" parent="Canvas/Research/Panel/Grid/Scroll/VBox" instance=ExtResource( 6 )]
margin_right = 100.0
prefab = ExtResource( 8 )
cost = 200

[node name="ResearchPanel2" parent="Canvas/Research/Panel/Grid/Scroll/VBox" instance=ExtResource( 6 )]
margin_top = 44.0
margin_right = 100.0
margin_bottom = 84.0
id = 1
prefab = ExtResource( 13 )
cost = 150

[node name="Label" parent="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel2/Panel/GridContainer/Title" index="0"]
text = "Big Farm"

[node name="Label" parent="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel2/Panel/GridContainer" index="2"]
text = "150c"

[node name="ResearchPanel3" parent="Canvas/Research/Panel/Grid/Scroll/VBox" instance=ExtResource( 6 )]
margin_top = 88.0
margin_right = 100.0
margin_bottom = 128.0
id = 2
prefab = ExtResource( 18 )
cost = 1000

[node name="Label" parent="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel3/Panel/GridContainer/Title" index="0"]
text = "Hotel"

[node name="Label" parent="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel3/Panel/GridContainer" index="2"]
text = "1000c"

[node name="ResearchPanel4" parent="Canvas/Research/Panel/Grid/Scroll/VBox" instance=ExtResource( 6 )]
margin_top = 132.0
margin_right = 100.0
margin_bottom = 172.0
id = 3
prefab = ExtResource( 19 )
cost = 800

[node name="Label" parent="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel4/Panel/GridContainer/Title" index="0"]
text = "Mine"

[node name="Label" parent="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel4/Panel/GridContainer" index="2"]
text = "800c"

[node name="Margin4" type="MarginContainer" parent="Canvas"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -73.0
margin_right = -2.0
margin_bottom = -33.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Canvas/Margin4"]
margin_right = 85.0
margin_bottom = 40.0

[node name="Grid" type="GridContainer" parent="Canvas/Margin4/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas/Margin4/Panel/Grid"]
margin_right = 85.0
margin_bottom = 9.0
rect_min_size = Vector2( 85, 0 )
custom_fonts/font = SubResource( 6 )
text = "Big House"
align = 1

[node name="Label2" type="Label" parent="Canvas/Margin4/Panel/Grid"]
margin_top = 13.0
margin_right = 85.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 7 )
text = "100C"
align = 1

[node name="HSlider" type="HSlider" parent="Canvas/Margin4/Panel/Grid"]
margin_top = 25.0
margin_right = 85.0
margin_bottom = 41.0
max_value = 5000.0
rounded = true

[node name="Game_Over" type="Panel" parent="Canvas"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Canvas/Game_Over"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -75.0
margin_right = 125.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 150 )
theme = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Canvas/Game_Over/Panel"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 10 )
text = "Game over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas/Game_Over/Panel"]
anchor_right = 1.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 10 )
text = "Game over"
align = 1
valign = 1

[node name="Button" type="Button" parent="Canvas/Game_Over/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -25.0
margin_right = 50.0
margin_bottom = -5.0
rect_min_size = Vector2( 100, 20 )
focus_mode = 0
custom_fonts/font = SubResource( 11 )
text = "Retry"

[node name="Fleshpot_Menu" type="Panel" parent="Canvas"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Canvas/Fleshpot_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -75.0
margin_right = 125.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 150 )
theme = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Canvas/Fleshpot_Menu/Panel"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
margin_left = 4.0
margin_top = 9.0
margin_right = 4.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
text = "Do you buy 
rainbow?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Canvas/Fleshpot_Menu/Panel"]
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
text = "Do you buy
rainbow?"
align = 1
valign = 1

[node name="Center" type="CenterContainer" parent="Canvas/Fleshpot_Menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -20.0
margin_right = 32.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Canvas/Fleshpot_Menu/Panel/Center"]
margin_top = 12.0
margin_right = 64.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 10 )
text = "25K"
align = 1
valign = 1

[node name="Grid" type="GridContainer" parent="Canvas/Fleshpot_Menu/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
custom_constants/hseparation = 50
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="Canvas/Fleshpot_Menu/Panel/Grid"]
margin_right = 100.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
focus_mode = 0
custom_fonts/font = SubResource( 11 )
text = "Buy"

[node name="Cancel" type="Button" parent="Canvas/Fleshpot_Menu/Panel/Grid"]
margin_left = 150.0
margin_right = 250.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 20 )
focus_mode = 0
custom_fonts/font = SubResource( 11 )
text = "Cancel"

[node name="Research" type="Node2D" parent="."]
visible = false
script = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Research"]
stream = ExtResource( 11 )
pitch_scale = 3.0

[node name="camera" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="camera"]
position = Vector2( 0, 1 )
current = true
smoothing_enabled = true

[node name="GrassTexture" type="Sprite" parent="camera"]
position = Vector2( 0, 138 )
scale = Vector2( 20, 1 )
texture = ExtResource( 9 )

[connection signal="pressed" from="Canvas/Margin3/Button" to="Research" method="_on_Button_pressed"]
[connection signal="input_event" from="Canvas/Fleshpot/Area2D" to="Canvas/Fleshpot" method="_on_Area2D_input_event"]
[connection signal="pressed" from="Canvas/Game_Over/Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Canvas/Fleshpot_Menu/Panel/Grid/Buy" to="Canvas/Fleshpot" method="_on_Buy_pressed"]
[connection signal="pressed" from="Canvas/Fleshpot_Menu/Panel/Grid/Cancel" to="Canvas/Fleshpot" method="_on_Cancel_pressed"]

[editable path="Canvas/Panel/Grid/Scroll/Vbox/BuildingPanel2"]
[editable path="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel2"]
[editable path="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel3"]
[editable path="Canvas/Research/Panel/Grid/Scroll/VBox/ResearchPanel4"]
